RESOLVED FIXED237831
[model] <model interactive> doesn't allow model to be rotated on iOS
https://bugs.webkit.org/show_bug.cgi?id=237831
Summary [model] <model interactive> doesn't allow model to be rotated on iOS
Antoine Quint
Reported 2022-03-14 09:15:31 PDT
[model] <model interactive> doesn't allow model to be rotated on iOS
Attachments
Patch (10.43 KB, patch)
2022-03-14 09:22 PDT, Antoine Quint
ews-feeder: commit-queue-
Patch (11.53 KB, patch)
2022-03-14 10:03 PDT, Antoine Quint
simon.fraser: review+
ews-feeder: commit-queue-
Antoine Quint
Comment 1 2022-03-14 09:22:26 PDT
Antoine Quint
Comment 2 2022-03-14 09:22:31 PDT
Antoine Quint
Comment 3 2022-03-14 10:03:53 PDT
Antoine Quint
Comment 4 2022-03-14 12:36:31 PDT
Note You need to log in before you can comment on or make changes to this bug.